data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_261.wast
;; 2. **Test Description: Position `nop` before and after a `br` instruction within a loop.**    - **Reasoning**: Validate that `nop` doesn't affect the unconditional branch.    - **Check**: The loop should continue based on the proper execution of `br`.

(assert_invalid
  (module
    (func (loop (nop) (br 0) (nop)))
  )
  "unexpected end of section or function"
)